--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-- 2.6.6
+- 2.5
+- 2.6
+- 2.7
 before_install: gem install bundler -v 2.1.4
 deploy:
   provider: rubygems
@@ -11,5 +13,6 @@ deploy:
   gem: bullion
   on:
     tags: true
+    rvm: 2.6
     repo: jgnagy/bullion
   skip_cleanup: 'true'
