--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - 'spec/**/*_spec.rb'
     - 'db/schema.rb'
   TargetRubyVersion: 2.6
+  NewCops: enable
 
 Metrics/AbcSize:
   Max: 21
