--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,18 +3,18 @@ Layout/LineLength:
 
 AllCops:
   Exclude:
-    - 'spec/**/*_spec.rb'
-    - 'db/schema.rb'
-    - 'vendor/**/*'
-  TargetRubyVersion: 2.6
+  - 'db/schema.rb'
+  - 'vendor/**/*'
+  TargetRubyVersion: 3.1
   NewCops: enable
 
 Metrics/AbcSize:
   Max: 21
 
 Metrics/BlockLength:
-  Max: 30
+  Max: 35
   Exclude:
+  - 'spec/**/*_spec.rb'
   - 'Rakefile'
   - '*.gemspec'
 
@@ -22,10 +22,29 @@ Metrics/MethodLength:
   Max: 20
 
 Metrics/ModuleLength:
-  Max: 150
+  Max: 160
+  Exclude:
+  - 'spec/**/*_spec.rb'
 
 Metrics/ClassLength:
   Max: 300
+  Exclude:
+  - 'spec/**/*_spec.rb'
+
+Gemspec/RequireMFA:
+  Enabled: false
+
+Style/MixinUsage:
+  Exclude:
+  - "bin/console"
+
+Style/StringLiterals:
+  Enabled: true
+  EnforcedStyle: double_quotes
+
+Style/StringLiteralsInInterpolation:
+  Enabled: true
+  EnforcedStyle: double_quotes
 
 Style/StringConcatenation:
   Exclude:
