--- a/.roxanne.yml
+++ b/.roxanne.yml
@@ -10,5 +10,8 @@ stages:
     - ./scripts/test.sh
   release:
     image: ruby:3.2
+    scripts:
+    - ./scripts/release.sh
+    - ./scripts/publish.sh
     only:
     - main
